# goit-ds-hw-03

First_Task/: create_db.py  main.py  pyproject.toml
Second_Task/: main.py  pyproject.toml
