[project]
name = "goit-ds-hw-03"
version = "0.1.0"
description = ""
authors = [
    {name = "Yaroslav",email = "elinder2010@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
